2004-04-21  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/expander.c (do_expander): A new demo.

	* demos/gtk-demo/Makefile.am (demos): Add expander.c.

2004-04-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_allocate_children): Make
	sure anchored children get size allocated, even if the layout
	is valid.  (#122323, Andrew E. Makeev)
	(gtk_text_view_scroll_pages): 
	(gtk_text_view_scroll_hpages): Don't scroll to cursor position
	if we already have pending scrolls. Bandaid fix for #78513.

Mon Apr 19 17:59:17 2004  Owen Taylor  <otaylor@redhat.com>

	* INSTALL.in: Update libpng and libjpeg URLs, remove
	note about building without since that's not the normal
	case.

Sun Apr 11 09:45:11 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkicontheme.c (load_themes): Fix a couple of typos in
	handling of SVG/non-SVG unthemed icons.

2004-04-19  Morten Welinder  <terra@gnome.org>

	* gtk/gtktoolbar.c (gtk_toolbar_focus): Don't leak list of
	children.  (#140523)

2004-04-19  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktextbtree.c (_gtk_text_line_previous_could_contain_tag): 
	Don't stop the iteration up to the tag_root too 
	early.  (#109945, Dongho Shin)

Sun Apr 18 17:06:03 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gdk/x11/gdkkeys-x11.c (get_effective_keymap): Make
	gdk_keymap_translate_keyboard_state() handle NULL
	keymaps. (#139715, Torsten Schoenfeld).

Sun Apr 18 16:59:21 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* configure.in: Don't erase GDK_EXTRA_CFLAGS. Fixes bug 139586,
	reported by Pedro RODRIGUEZ, about compilation problems when
	Xcursor is installed in a non-standard location.

Sun Apr 18 16:15:15 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	Support for _NET_WM_USER_TIME (bug 115650). Patch by Elijah
	Newren.
	
	* gdk/x11/gdkwindow-x11.[ch]: Add new internal function
	_gdk_x11_set_user_time() to set the _NET_WM_USER_TIME property.
