@@ -1,5 +1,9 @@
 2004-04-21  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup): 
+	Don't call gtk_tree_view_scroll_to_cell() on an empty tree view. 
+	It doesn't like that.  (#140642, Christian Persch)
+
 	* demos/gtk-demo/expander.c (do_expander): A new demo.
 
 	* demos/gtk-demo/Makefile.am (demos): Add expander.c.
